--- a/DaKineWeatherMobileApp/package.json
+++ b/DaKineWeatherMobileApp/package.json
@@ -1,7 +1,8 @@
 {
   "name": "dakineweathermobileapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "//": "changed app entry from default AppEntry in node modules",
+  "main": "./src/App.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
