--- a/DaKineWeatherBackend/package.json
+++ b/DaKineWeatherBackend/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.2"
+    "express-validator": "^7.0.1",
+    "mongoose": "^8.3.2",
+    "node-fetch": "^3.3.2"
   }
 }
