--- a/DaKineWeatherBackend/package.json
+++ b/DaKineWeatherBackend/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.3.2",
-    "node-fetch": "^3.3.2"
+    "google-auth-library": "^9.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.0",
+    "node-fetch": "^3.3.2",
+    "uuid": "^9.0.1"
   }
 }
