--- a/DaKineWeatherMobileApp/package.json
+++ b/DaKineWeatherMobileApp/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
