--- a/DaKineWeatherMobileApp/package.json
+++ b/DaKineWeatherMobileApp/package.json
@@ -23,6 +23,7 @@
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
